--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     // Dagger 2
     implementation "com.google.dagger:dagger:2.14.1"
     kapt "com.google.dagger:dagger-compiler:2.14.1"
+    implementation 'com.google.dagger:dagger-android:2.14.1'
+    implementation 'com.google.dagger:dagger-android-support:2.14.1'
+    kapt 'com.google.dagger:dagger-android-processor:2.14.1'
     compileOnly "org.glassfish:javax.annotation:3.1.1"
 
     //Rx
